--- a/style.css
+++ b/style.css
@@ -12,6 +12,37 @@
     --transparent-white:rgba(255, 255, 255,  0.75)
 }
 
-h2 {
+body {
+    padding: 5.5rem 1.5rem;
+}
 
+h2 {
+    font-family: 'Big Shoulders Display', sans-serif;
+    text-transform: uppercase;
+    font-size: 2.5rem;
+    color: var(--gray);
+    margin-block: 1.875rem;
+}
+
+p {
+    font-family: 'Lexend Deca', sans-serif;
+    font-size: 0.9375rem;
+    color: var(--transparent-white);
+    margin-bottom: 1.875rem;
+}
+
+a {
+   font-family: 'Lexend Deca', sans-serif;
+}
+
+.sedans {
+    background: var(--orange);
+}
+
+.suvs {
+    background: var(--cyan);
+}
+
+.luxuosos {
+    background: var(--dark-cyan);
 }
